--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "type": "module",
   "dependencies": {
+    "@botui/react": "^1.1.5",
     "axios": "^1.9.0",
     "body-parser": "^2.2.0",
+    "botui": "^1.1.3",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
