--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
+  "name": "dorianjs-server",
+  "version": "1.0.0",
+  "description": "Backend server for Dorian emotional AI",
+  "main": "server.js",
   "type": "module",
-  "dependencies": {
-    "@botui/react": "^1.1.5",
-    "axios": "^1.9.0",
-    "body-parser": "^2.2.0",
-    "botui": "^1.1.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "jest": "^30.0.0",
-    "supertest": "^7.1.1"
-  },
   "scripts": {
-    "test": "jest"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
