--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.10",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "lucide-react": "^0.522.0",
     "node-fetch": "^3.3.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "autoprefixer": "^10.4.21",
+    "nodemon": "^3.1.10",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.10"
   },
   "engines": {
     "node": ">=14.0.0"
